--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
         "@tailwindcss/forms": "^0.5.2",
         "alpinejs": "^3.4.2",
         "autoprefixer": "^10.4.16",
-        "axios": "^1.6.1",
+        "axios": "^1.6.3",
         "laravel-vite-plugin": "^1.0.0",
         "postcss": "^8.4.32",
         "tailwindcss": "^3.4.0",
         "vite": "^5.0.0"
+    },
+    "dependencies": {
+        "chart.js": "^4.4.1"
     }
 }
